--- a/107302002_HW3-1.ipynb
+++ b/107302002_HW3-1.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,6 +663,7 @@
     }
    ],
    "source": [
+    "# Already using Dropout at the model\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "model = BinaryClassification(dropout=True).to(device)\n",
     "criterion = nn.CrossEntropyLoss()\n",
@@ -783,26 +784,13 @@
     }
    ],
    "source": [
+    "# Already using batch normalization at the model\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "model = BinaryClassification(batch_norm=True).to(device)\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = optim.Adam(model.parameters(), lr=1e-3)\n",
     "regularization(train_loader, val_loader, model, epochs=100, criterion=criterion, optimizer=optimizer)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Homework 3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
