--- a/107302002_HW1.ipynb
+++ b/107302002_HW1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
     "        \n",
     "        # convert to tensors\n",
     "        self.X = torch.tensor(X, dtype=torch.float32)\n",
-    "        self.y = torch.tensor(y)\n",
+    "        self.y = torch.tensor(y, dtype=torch.float32)\n",
     "    \n",
     "    def __len__(self):\n",
     "        return len(self.y)\n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,6 +80,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def binary_acc(y_pred, y_true):\n",
+    "    y_pred_tag = torch.round(torch.sigmoid(y_pred))\n",
+    "    correct_result_sum = (y_pred_tag == y_true).sum().float()\n",
+    "    acc = correct_result_sum / y_true.shape[0]\n",
+    "    acc = torch.round(acc*100)\n",
+    "    return acc"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
@@ -96,14 +110,15 @@
     "            \n",
     "            x, y = batch\n",
     "            \n",
-    "            logits = model(x.to(device))\n",
-    "            loss = criterion(logits, y.to(device))\n",
+    "            y_pred = model(x.to(device))\n",
+    "            loss = criterion(y_pred, y.to(device).unsqueeze(1))\n",
     "            \n",
     "            optimizer.zero_grad()\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
     "            \n",
-    "            acc = (logits.argmax(dim=-1) == y.to(device)).float().mean()\n",
+    "            acc = binary_acc(y_pred, y.unsqueeze(1))\n",
+    "            \n",
     "            train_loss.append(loss.item())\n",
     "            train_accs.append(acc)\n",
     "        \n",
@@ -116,12 +131,12 @@
     "        valid_accs = []\n",
     "        \n",
     "        for batch in val_loader:\n",
-    "            imgs, labels = batch\n",
+    "            x, y = batch\n",
     "            \n",
     "            with torch.no_grad():\n",
-    "                logits = model(imgs.to(device))\n",
+    "                y_pred = model(x.to(device))\n",
     "                \n",
-    "                acc = (logits.argmax(dim=-1) == labels.to(device)).float().mean()\n",
+    "                acc = binary_acc(y_pred, y.unsqueeze(1))\n",
     "                \n",
     "                valid_loss.append(loss.item())\n",
     "                valid_accs.append(acc)\n",
@@ -363,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +386,7 @@
     "    def __init__(self):\n",
     "        super(BinaryClassification, self).__init__()\n",
     "        self.layer_1 = nn.Linear(12, 128) \n",
-    "        self.layer_out = nn.Linear(128, 2) \n",
+    "        self.layer_out = nn.Linear(128, 1)\n",
     "        self.relu = nn.ReLU()\n",
     "        \n",
     "    def forward(self, inputs):\n",
@@ -383,39 +398,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 1/10 ] | train_loss = 0.58412, train_acc = 0.77083, val_loss = 0.50714, val_acc = 0.79167\n",
-      "[ 2/10 ] | train_loss = 0.44715, train_acc = 0.81250, val_loss = 0.40733, val_acc = 0.81250\n",
-      "[ 3/10 ] | train_loss = 0.39121, train_acc = 0.84635, val_loss = 0.19099, val_acc = 0.84375\n",
-      "[ 4/10 ] | train_loss = 0.35685, train_acc = 0.86458, val_loss = 0.48609, val_acc = 0.84375\n",
-      "[ 5/10 ] | train_loss = 0.33304, train_acc = 0.86458, val_loss = 0.44749, val_acc = 0.84375\n",
-      "[ 6/10 ] | train_loss = 0.31860, train_acc = 0.87500, val_loss = 0.42144, val_acc = 0.86458\n",
-      "[ 7/10 ] | train_loss = 0.30729, train_acc = 0.88802, val_loss = 0.18491, val_acc = 0.86458\n",
-      "[ 8/10 ] | train_loss = 0.29652, train_acc = 0.88802, val_loss = 0.21103, val_acc = 0.87500\n",
-      "[ 9/10 ] | train_loss = 0.28481, train_acc = 0.89844, val_loss = 0.54152, val_acc = 0.86458\n",
-      "[ 10/10 ] | train_loss = 0.27667, train_acc = 0.90104, val_loss = 0.51886, val_acc = 0.87500\n"
+      "[ 1/50 ] | train_loss = 0.55802, train_acc = 80.12500, val_loss = 0.56368, val_acc = 80.33334\n",
+      "[ 2/50 ] | train_loss = 0.47497, train_acc = 80.50000, val_loss = 0.59813, val_acc = 80.33334\n",
+      "[ 3/50 ] | train_loss = 0.42741, train_acc = 82.12500, val_loss = 0.54487, val_acc = 84.50000\n",
+      "[ 4/50 ] | train_loss = 0.39210, train_acc = 84.25000, val_loss = 0.16625, val_acc = 85.83334\n",
+      "[ 5/50 ] | train_loss = 0.36651, train_acc = 85.66666, val_loss = 0.43186, val_acc = 85.50000\n",
+      "[ 6/50 ] | train_loss = 0.34734, train_acc = 86.12500, val_loss = 0.43155, val_acc = 85.50000\n",
+      "[ 7/50 ] | train_loss = 0.33393, train_acc = 86.37500, val_loss = 0.41545, val_acc = 84.66666\n",
+      "[ 8/50 ] | train_loss = 0.32045, train_acc = 86.91666, val_loss = 0.42641, val_acc = 85.50000\n",
+      "[ 9/50 ] | train_loss = 0.31034, train_acc = 87.37500, val_loss = 0.27395, val_acc = 85.50000\n",
+      "[ 10/50 ] | train_loss = 0.30266, train_acc = 88.25000, val_loss = 0.41372, val_acc = 85.66666\n",
+      "[ 11/50 ] | train_loss = 0.29385, train_acc = 89.25000, val_loss = 0.11944, val_acc = 85.66666\n",
+      "[ 12/50 ] | train_loss = 0.28706, train_acc = 88.75000, val_loss = 0.25979, val_acc = 86.66666\n",
+      "[ 13/50 ] | train_loss = 0.28058, train_acc = 90.00000, val_loss = 0.32214, val_acc = 86.50000\n",
+      "[ 14/50 ] | train_loss = 0.27688, train_acc = 88.95834, val_loss = 0.20579, val_acc = 86.66666\n",
+      "[ 15/50 ] | train_loss = 0.27019, train_acc = 89.95834, val_loss = 0.11362, val_acc = 87.83334\n",
+      "[ 16/50 ] | train_loss = 0.26468, train_acc = 90.87500, val_loss = 0.19413, val_acc = 86.66666\n",
+      "[ 17/50 ] | train_loss = 0.25795, train_acc = 90.83334, val_loss = 0.09516, val_acc = 86.66666\n",
+      "[ 18/50 ] | train_loss = 0.25570, train_acc = 91.33334, val_loss = 0.15539, val_acc = 86.66666\n",
+      "[ 19/50 ] | train_loss = 0.25439, train_acc = 90.75000, val_loss = 0.11599, val_acc = 86.66666\n",
+      "[ 20/50 ] | train_loss = 0.24646, train_acc = 91.66666, val_loss = 0.23418, val_acc = 86.50000\n",
+      "[ 21/50 ] | train_loss = 0.24087, train_acc = 91.87500, val_loss = 0.14569, val_acc = 86.50000\n",
+      "[ 22/50 ] | train_loss = 0.23704, train_acc = 91.87500, val_loss = 0.21541, val_acc = 87.66666\n",
+      "[ 23/50 ] | train_loss = 0.23378, train_acc = 91.83334, val_loss = 0.10064, val_acc = 85.66666\n",
+      "[ 24/50 ] | train_loss = 0.23007, train_acc = 92.16666, val_loss = 0.09971, val_acc = 85.50000\n",
+      "[ 25/50 ] | train_loss = 0.22622, train_acc = 91.87500, val_loss = 0.20846, val_acc = 86.66666\n",
+      "[ 26/50 ] | train_loss = 0.22122, train_acc = 92.04166, val_loss = 0.11509, val_acc = 86.66666\n",
+      "[ 27/50 ] | train_loss = 0.22142, train_acc = 91.91666, val_loss = 0.45291, val_acc = 87.83334\n",
+      "[ 28/50 ] | train_loss = 0.21792, train_acc = 92.33334, val_loss = 0.10387, val_acc = 86.66666\n",
+      "[ 29/50 ] | train_loss = 0.21332, train_acc = 92.66666, val_loss = 0.12246, val_acc = 87.66666\n",
+      "[ 30/50 ] | train_loss = 0.21135, train_acc = 92.58334, val_loss = 0.10037, val_acc = 86.66666\n",
+      "[ 31/50 ] | train_loss = 0.20572, train_acc = 93.12500, val_loss = 0.17015, val_acc = 87.66666\n",
+      "[ 32/50 ] | train_loss = 0.20369, train_acc = 93.66666, val_loss = 0.15024, val_acc = 87.83334\n",
+      "[ 33/50 ] | train_loss = 0.20365, train_acc = 92.83334, val_loss = 0.12561, val_acc = 87.50000\n",
+      "[ 34/50 ] | train_loss = 0.19837, train_acc = 93.87500, val_loss = 0.44537, val_acc = 87.66666\n",
+      "[ 35/50 ] | train_loss = 0.19583, train_acc = 93.70834, val_loss = 0.14091, val_acc = 86.50000\n",
+      "[ 36/50 ] | train_loss = 0.19330, train_acc = 93.41666, val_loss = 0.10842, val_acc = 87.66666\n",
+      "[ 37/50 ] | train_loss = 0.19174, train_acc = 93.70834, val_loss = 0.11144, val_acc = 88.66666\n",
+      "[ 38/50 ] | train_loss = 0.18931, train_acc = 93.91666, val_loss = 0.12140, val_acc = 89.83334\n",
+      "[ 39/50 ] | train_loss = 0.18499, train_acc = 93.58334, val_loss = 0.17608, val_acc = 90.83334\n",
+      "[ 40/50 ] | train_loss = 0.18257, train_acc = 93.91666, val_loss = 0.13092, val_acc = 89.83334\n",
+      "[ 41/50 ] | train_loss = 0.18071, train_acc = 94.12500, val_loss = 0.07714, val_acc = 89.66666\n",
+      "[ 42/50 ] | train_loss = 0.17789, train_acc = 93.87500, val_loss = 0.14840, val_acc = 91.83334\n",
+      "[ 43/50 ] | train_loss = 0.17488, train_acc = 94.16666, val_loss = 0.26873, val_acc = 90.83334\n",
+      "[ 44/50 ] | train_loss = 0.17460, train_acc = 94.16666, val_loss = 0.10020, val_acc = 90.83334\n",
+      "[ 45/50 ] | train_loss = 0.16997, train_acc = 94.41666, val_loss = 0.09381, val_acc = 90.83334\n",
+      "[ 46/50 ] | train_loss = 0.16759, train_acc = 94.45834, val_loss = 0.05013, val_acc = 92.00000\n",
+      "[ 47/50 ] | train_loss = 0.16520, train_acc = 94.45834, val_loss = 0.10991, val_acc = 90.83334\n",
+      "[ 48/50 ] | train_loss = 0.16461, train_acc = 94.75000, val_loss = 0.25087, val_acc = 91.83334\n",
+      "[ 49/50 ] | train_loss = 0.16268, train_acc = 94.95834, val_loss = 0.17764, val_acc = 90.83334\n",
+      "[ 50/50 ] | train_loss = 0.16031, train_acc = 94.70834, val_loss = 0.09009, val_acc = 91.00000\n"
      ]
     }
    ],
    "source": [
-    "epochs = 10\n",
+    "epochs = 50\n",
     "device = torch.device('cpu')\n",
     "model = BinaryClassification().to(device)\n",
-    "criterion = nn.CrossEntropyLoss()\n",
+    "criterion = nn.BCEWithLogitsLoss()\n",
     "optimizer = optim.Adam(model.parameters(), lr = 1e-3)\n",
     "train(train_loader, val_loader, model, epochs, criterion, optimizer)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "ac3da779536756720bc930bbdcbe3b303a716c4190960bb8b007750e7b6b7c5d"
+   "hash": "219da6a50c866249bdfc07e8ee29701a3e2568a26ff21cc98a0eb284d1611ca6"
   },
   "kernelspec": {
    "display_name": "Python 3.7.6 64-bit",
