--- a/test.ipynb
+++ b/test.ipynb
@@ -2,18 +2,113 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import copy\n",
     "import torch\n",
     "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
     "import torch.optim as optim\n",
     "\n",
     "from DataPreprocess import create_dataloader\n",
     "from InitializingModule import InitModel\n",
-    "from TrainingAlgorithm import train, reorganize_module, LTS_module, multiclass_weight_tuning"
+    "from TrainingAlgorithm import train, reorganize_module, LTS_module, multiclass_weight_tuning\n",
+    "from utils import BinaryFocalLossWithLogits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class FocalLoss(nn.Module):\n",
+    "    def __init__(self, alpha=0.8, gamma=2, weight=None, size_average=True):\n",
+    "        super(FocalLoss, self).__init__()\n",
+    "        self.alpha = alpha\n",
+    "        self.gamma = gamma\n",
+    "\n",
+    "    def forward(self, inputs, targets, smooth=1):\n",
+    "        \n",
+    "        #comment out if your model contains a sigmoid or equivalent activation layer\n",
+    "        inputs = torch.sigmoid(inputs)       \n",
+    "        \n",
+    "        #flatten label and prediction tensors\n",
+    "        inputs = inputs.view(-1)\n",
+    "        targets = targets.view(-1)\n",
+    "        \n",
+    "        #first compute binary cross-entropy \n",
+    "        BCE = F.binary_cross_entropy(inputs, targets, reduction='mean')\n",
+    "        BCE_EXP = torch.exp(-BCE)\n",
+    "        focal_loss = self.alpha * (1-BCE_EXP)**self.gamma * BCE\n",
+    "                       \n",
+    "        return focal_loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.1733)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_true = torch.tensor([0.])\n",
+    "y_pred = torch.tensor([1.])\n",
+    "criterion = BinaryFocalLossWithLogits(alpha=0.25)\n",
+    "criterion(y_true, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.0433)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "criterion = FocalLoss(alpha=0.25)\n",
+    "criterion(y_true, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.1235])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.sigmoid(y_pred)"
    ]
   },
   {
